--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,17 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1", features = ["derive"]}
-config = "0.13"
-uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+config = "0.13"
+secrecy = { version = "0.8", features = ["serde"] }
+serde = { version = "1", features = ["derive"]}
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-actix-web = "0.7"
+tracing-bunyan-formatter = "0.3"
+uuid = { version = "1", features = ["v4"] }
 
 [dependencies.sqlx]
 version = "0.7"
